# ChangeLog for sys-apps/calculate-server
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-server-2.1.12-r7 (02 Dec 2010)

  02 Dec 2010; Самоукин Алексей <as@calculate.ru>
  -calculate-server-2.1.12-r6.ebuild, +calculate-server-2.1.12-r7.ebuild,
  +files/calculate-server-2.1.12-gen_id.patch:
  Fix generate replication id.

  28 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.10-r1.ebuild:
  Remove old package.

*calculate-server-2.1.12-r6 (12 Oct 2010)

  12 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.12-r5.ebuild, +calculate-server-2.1.12-r6.ebuild,
  +files/calculate-server-2.1.12-fix-remote.patch:
  Add patch for fix permission on /var/calculate/remote.

*calculate-server-2.1.12-r5 (12 Oct 2010)

  12 Oct 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.12-r4.ebuild, +calculate-server-2.1.12-r5.ebuild,
  +files/calculate-server-2.1.12-fix-squid.patch:
  Update server for fix templates of new squid.

*calculate-server-2.1.12-r4 (23 Sep 2010)

  23 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.12-r3.ebuild, +calculate-server-2.1.12-r4.ebuild:
  Added use depend for proftpd.

*calculate-server-2.1.12-r3 (12 Aug 2010)

  12 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +files/server_i18n_path.patch, -calculate-server-2.1.12-r2.ebuild,
  +calculate-server-2.1.12-r3.ebuild:
  Add path for place i18n files.

*calculate-server-2.1.12-r2 (21 Jul 2010)

  21 Jul 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-server-2.1.12-r1.ebuild, +calculate-server-2.1.12-r2.ebuild,
  +files/calculate-server-2.1.12-r2.patch:
  Add bugfix for calculate-server.

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-server-9999.ebuild:
  Fix git path.

*calculate-server-2.1.12-r1 (10 Apr 2010)
*calculate-server-2.1.10-r1 (10 Apr 2010)
