@@ -4,7 +4,9 @@ AUX calculate-server-2.1.12-gen_id.patch 2261 RMD160 32bdb6d163b303fe43322a80a20
 AUX calculate-server-2.1.12-r2.patch 1817 RMD160 e2cd6149d0745b7f5859d6d601d3a98a5f5f3f83 SHA1 9ec8885c5d76a0750efd3c09275a2576f71e1213 SHA256 e10c157154d76ed6aa9dfde26a2137a7ee6f9a7d3acf64ba0db2dd14cd2875f5
 AUX server_i18n_path.patch 419 RMD160 46984bb115772b5076ae0b96a5577628d17b2621 SHA1 fe5c64b273946d7b8e60e5a6f2525d9c31224644 SHA256 31693242abc0390492cde326970eb946d212f8295023e70577e0429f378c196d
 DIST calculate-server-2.1.12.tar.bz2 156962 RMD160 beb1d50b72bbb592c666a81504e955a99e4341c4 SHA1 c38413bbf7d257e78888453f5a94ec15071c432b SHA256 c866814d014c5beb84b24febc8491d1d8cbebb6b545b21c4ff601d05b593b36b
+DIST calculate-server-2.1.13.tar.bz2 157717 RMD160 42d15a964a8c94774003d89ddc6bd834d20b1d5d SHA1 08e47e64aa8173b76a73693346d465ed62ac2ea1 SHA256 c748759f792c21dd28f2659bfeccf2a707c08f36a5d49766ceb6b922a98e930e
 EBUILD calculate-server-2.1.12-r7.ebuild 5456 RMD160 5b5bf4a9bfb7cc4fed496a5f574668d4fcbf7ba2 SHA1 eb550cc5fa0d058f73b51425899db0b1bd6f7326 SHA256 68dea52805e0ef83d91362cc60be32ed6e8110840267f2619c5a9297bf89144f
+EBUILD calculate-server-2.1.13.ebuild 4947 RMD160 a003a07f1beffce6744bb3fc14019cedb3e1b53b SHA1 4450efaa9b9ed085530e6787b751e4a7e7166f11 SHA256 4165f070332916040090730041d852ba5bc37f1eedfba1dbdbe773b2013adb25
 EBUILD calculate-server-9999.ebuild 982 RMD160 870c42d025013fd7f7d0fe8cde686546e3bc2d70 SHA1 90b5183a071503257a8842d2592096e0dc0aa49a SHA256 01b0741043617d45c6ce8089c207684eab1aa7c8610bf3cc33bac1124c67df52
 MISC ChangeLog 5044 RMD160 35e0218ed53fe9e13d41794c6b62602094faa33e SHA1 48a20156ca62b145a142603202f9edb672fcf0e6 SHA256 135f68399698887b4f1d4fdef611ced01aebd85e8dbe152b4aeeed5bd0ddc5f5
 MISC metadata.xml 286 RMD160 e243725ec1a1302cab0d0efee76a4a926e855916 SHA1 6071aa604ea5a1ba8e1772e8f37a24f26b893d8d SHA256 aab7ddde310df96da76277d5ae340a4b0926bec3b354bfb2fea3288081036d74
