@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-server-2.1.13 (14 Dec 2010)
+
+  14 Dec 2010; Самоукин Алексей <as@calculate.ru>
+  +calculate-server-2.1.13.ebuild:
+  Created ejabberd certificate.
+  Using ejabberd.
+
 *calculate-server-2.1.12-r7 (02 Dec 2010)
 
   02 Dec 2010; Самоукин Алексей <as@calculate.ru>
